Support for LPC55s69, MCXN947, MCXA153 platforms added

--- a/scripts/cmake_options.mak.in
+++ b/scripts/cmake_options.mak.in
@@ -18,9 +18,10 @@ SSS_HAVE_NX_TYPE_NX_PICC := ${SSS_HAVE_NX_TYPE_NX_PICC}
 # e.g. Windows, PC Linux, Embedded Linux, Kinetis like embedded platform
 SSS_HAVE_HOST_PCWINDOWS := ${SSS_HAVE_HOST_PCWINDOWS}
 SSS_HAVE_HOST_PCLINUX64 := ${SSS_HAVE_HOST_PCLINUX64}
-SSS_HAVE_HOST_FRDMK64F := ${SSS_HAVE_HOST_FRDMK64F}
 SSS_HAVE_HOST_LPCXPRESSO55S := ${SSS_HAVE_HOST_LPCXPRESSO55S}
 SSS_HAVE_HOST_RASPBIAN := ${SSS_HAVE_HOST_RASPBIAN}
+SSS_HAVE_HOST_FRDMMCXA153 := ${SSS_HAVE_HOST_FRDMMCXA153}
+SSS_HAVE_HOST_FRDMMCXN947 := ${SSS_HAVE_HOST_FRDMMCXN947}
 
 # Communication Interface
 # 
@@ -197,14 +198,17 @@ SSS_HAVE_HOST_PCWINDOWS := ${SSS_HAVE_HOST_PCWINDOWS}
 # PC/Laptop Linux64
 SSS_HAVE_HOST_PCLINUX64 := ${SSS_HAVE_HOST_PCLINUX64}
 
-# Embedded Kinetis Freedom K64F
-SSS_HAVE_HOST_FRDMK64F := ${SSS_HAVE_HOST_FRDMK64F}
-
 # Embedded LPCXpresso55s
 SSS_HAVE_HOST_LPCXPRESSO55S := ${SSS_HAVE_HOST_LPCXPRESSO55S}
 
 # Embedded Linux on RaspBerry PI
 SSS_HAVE_HOST_RASPBIAN := ${SSS_HAVE_HOST_RASPBIAN}
+
+# Embedded frdmmcxa153
+SSS_HAVE_HOST_FRDMMCXA153 := ${SSS_HAVE_HOST_FRDMMCXA153}
+
+# Embedded frdmmcxn947
+SSS_HAVE_HOST_FRDMMCXN947 := ${SSS_HAVE_HOST_FRDMMCXN947}
 
 # Not using any Communication layer
 SSS_HAVE_SMCOM_NONE := ${SSS_HAVE_SMCOM_NONE}
