--- a/scripts/cmake_options_installed.cmake.in
+++ b/scripts/cmake_options_installed.cmake.in
@@ -29,14 +29,17 @@ SET(SSS_HAVE_HOST_PCWINDOWS ${SSS_HAVE_HOST_PCWINDOWS})
 # PC/Laptop Linux64
 SET(SSS_HAVE_HOST_PCLINUX64 ${SSS_HAVE_HOST_PCLINUX64})
 
-# Embedded Kinetis Freedom K64F
-SET(SSS_HAVE_HOST_FRDMK64F ${SSS_HAVE_HOST_FRDMK64F})
-
 # Embedded LPCXpresso55s
 SET(SSS_HAVE_HOST_LPCXPRESSO55S ${SSS_HAVE_HOST_LPCXPRESSO55S})
 
 # Embedded Linux on RaspBerry PI
 SET(SSS_HAVE_HOST_RASPBIAN ${SSS_HAVE_HOST_RASPBIAN})
+
+# Embedded frdmmcxa153
+SET(SSS_HAVE_HOST_FRDMMCXA153 ${SSS_HAVE_HOST_FRDMMCXA153})
+
+# Embedded frdmmcxn947
+SET(SSS_HAVE_HOST_FRDMMCXN947 ${SSS_HAVE_HOST_FRDMMCXN947})
 
 # Communication Interface
 # 
