library code updated for static analysis findings and new platforms support

--- a/lib/hostlib/nx_apdu/CMakeLists.txt
+++ b/lib/hostlib/nx_apdu/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright 2019,2020 NXP
+# Copyright 2019,2020,2025 NXP
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #
@@ -33,12 +33,13 @@ IF(SSS_HAVE_HOSTCRYPTO_MBEDTLS)
     IF(SSS_HAVE_MBEDTLS_3_X)
         TARGET_INCLUDE_DIRECTORIES(
             ${PROJECT_NAME}
-                PUBLIC ${NXMW_TOP_DIR}/ext/mbedtls3x/include
+                PUBLIC ../../../../mcuxsdk/middleware/mbedtls3x/include
         )
     ELSE()
         TARGET_INCLUDE_DIRECTORIES(
             ${PROJECT_NAME}
-            PUBLIC ${NXMW_TOP_DIR}/ext/mbedtls/include
+            PUBLIC ../../../../mcuxsdk/middleware/mbedtls/include
+            PUBLIC ../../../../mcuxsdk/middleware/mbedtls/library
         )
     ENDIF()
 ENDIF()
@@ -59,5 +60,27 @@ IF(SSS_HAVE_HOSTCRYPTO_MBEDTLS)
     TARGET_COMPILE_DEFINITIONS(
         ${PROJECT_NAME}
         PUBLIC MBEDTLS # FIXME : This must eventually not be needed because sss APIs should be enough
+    )
+ENDIF()
+
+IF(
+    "${CMAKE_CXX_COMPILER_ID}"
+    MATCHES
+    "MSVC"
+)
+    IF(NXPInternal)
+        TARGET_COMPILE_OPTIONS(
+        ${PROJECT_NAME}
+        PUBLIC /wd4200 # zero-sized array in struct/union
+        )
+    ENDIF()
+ENDIF()
+
+IF((SSS_HAVE_HOST_LINUX_LIKE) AND NOT(NXPInternal))
+    ADD_CUSTOM_COMMAND(
+        TARGET ${PROJECT_NAME}
+        POST_BUILD
+        COMMAND sudo cp $<TARGET_FILE:${PROJECT_NAME}> /usr/local/lib/
+        COMMENT "Copying lib${PROJECT_NAME}.so to /usr/local/lib/"
     )
 ENDIF()
