--- a/scripts/cmake_options_installed.cmake.in
+++ b/scripts/cmake_options_installed.cmake.in
@@ -1,4 +1,4 @@
-# Copyright 2023-2024 NXP
+# Copyright 2023-2025 NXP
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -37,6 +37,9 @@ SET(SSS_HAVE_HOST_RASPBIAN ${SSS_HAVE_HOST_RASPBIAN})
 
 # Embedded frdmmcxa153
 SET(SSS_HAVE_HOST_FRDMMCXA153 ${SSS_HAVE_HOST_FRDMMCXA153})
+
+# Embedded frdmmcxa156
+SET(SSS_HAVE_HOST_FRDMMCXA156 ${SSS_HAVE_HOST_FRDMMCXA156})
 
 # Embedded frdmmcxn947
 SET(SSS_HAVE_HOST_FRDMMCXN947 ${SSS_HAVE_HOST_FRDMMCXN947})
